Change MS file types to x type

--- a/settings.json
+++ b/settings.json
@@ -1,14 +1,14 @@
 {
   "application/vnd.google-apps.document": [
     "application/vnd.openxmlformats-officedocument.wordprocessingml.document",
-    "doc"
+    "docx"
   ],
   "application/vnd.google-apps.presentation": [
     "application/vnd.openxmlformats-officedocument.presentationml.presentation",
-    "ppt"
+    "pptx"
   ],
   "application/vnd.google-apps.sheet": [
     "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet",
-    "xls"
+    "xlsx"
   ]
 }
