--- a/settings.json
+++ b/settings.json
@@ -7,7 +7,7 @@
     "application/vnd.openxmlformats-officedocument.presentationml.presentation",
     "pptx"
   ],
-  "application/vnd.google-apps.sheet": [
+  "application/vnd.google-apps.spreadsheet": [
     "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet",
     "xlsx"
   ]
